DB取得＆接続設定の追加

--- a/src/test/java/com/example/demo/resources/application.properties
+++ b/src/test/java/com/example/demo/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=demo
 server.address=0.0.0.0
 server.port=8080
+spring.profiles.active = ${ENV:development}
 logging.level.org.springframework.web=DEBUG
 logging.level.org.flywaydb=DEBUG
 
@@ -11,12 +12,14 @@ spring.datasource.url=jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.jpa.open-in-view=false
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.properties.hibernate.format-sql=true
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
+logging.level.org.hibernate.SQL=INFO
+spring.flyway.enabled=false
 #################################
+
+
 
 spring.flyway.enabled=true
 spring.flyway.locations=classpath:db/migration
