--- a/docker-compose-local.yml
+++ b/docker-compose-local.yml
@@ -16,7 +16,7 @@ services:
     ports:
       - "${PGADMIN_PORT}:80"
     volumes:
-      - ./pgadmin4:/var/lib/pgadmin:Z
+      - ./pgadmin4:/var/lib/pgadmin
     env_file:
       - ./environment/pgadmin4-variables.env
     depends_on:
