--- a/src/main/resources/application-development.properties
+++ b/src/main/resources/application-development.properties
@@ -11,11 +11,13 @@ spring.datasource.url=jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.jpa.open-in-view=false
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.properties.hibernate.format-sql=true
 spring.jpa.show-sql=true
+spring.jpa.open-in-view=false
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.properties.hibernate.format-sql=true
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+spring.flyway.baseline-on-migrate=true
 #################################
 
 spring.flyway.enabled=true
