--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,8 +25,8 @@ services:
   api:
     build:
       context: .
-      dockerfile: Dockerfile.local
-      # target: builder
+      dockerfile: Dockerfile
+      target: builder
       args:
         WORKDIR: ${WORKDIR}
     container_name: share-favplace-api
