--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=demo
 server.address=0.0.0.0
 server.port=8080
+spring.profiles.active = ${ENV:development}
 logging.level.org.springframework.web=DEBUG
 logging.level.org.flywaydb=DEBUG
 
